--- a/setup.cfg
+++ b/setup.cfg
@@ -23,7 +23,10 @@ packages = find:
 install_requires =
 
 zip_safe = False
-include_package_data = True
+include_package_data = False
+
+[options.exclude_package_data]
+* = src/DIRACWebAppResources/WebApp/static
 
 [options.packages.find]
 where=src
