Set version to 1.0.0

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = DIRACWebAppResources
-version = 0.0.1a1
+version = 1.0.0
 description = DIRACWebAppResources contains slowly changing assets for WebAppDIRAC
 long_description = file: README.rst
 url = https://github.com/DIRACGrid/DIRACWebAppResources/
