--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,3 @@
 [build-system]
-requires = ["dirac_webapp_packaging~=1.0"]
+requires = ["setuptools>=42", "wheel"]
 build-backend = "setuptools.build_meta"
