--- a/setup.cfg
+++ b/setup.cfg
@@ -23,10 +23,7 @@ packages = find:
 install_requires =
 
 zip_safe = False
-include_package_data = False
-
-[options.exclude_package_data]
-* = src/DIRACWebAppResources/WebApp/static
+include_package_data = True
 
 [options.packages.find]
 where=src
